--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "clsx": "^2.0.0",
+    "echarts": "^5.6.0",
+    "echarts-gl": "^2.0.9",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
