--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "echarts": "^5.6.0",
     "echarts-gl": "^2.0.9",
+    "ngl": "^2.4.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
