Update blog to include wavefunction calculator

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/core": "3.8.1",
+    "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "^3.0.0",
+    "@peterspackman/occjs": "^0.7.8",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "clsx": "^2.0.0",
@@ -32,10 +33,11 @@
     "three": "^0.174.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/tsconfig": "3.7.0",
-    "@docusaurus/types": "3.7.0",
+    "@docusaurus/module-type-aliases": "3.8.1",
+    "@docusaurus/tsconfig": "3.8.1",
+    "@docusaurus/types": "3.8.1",
     "@types/three": "^0.173.0",
+    "string-replace-loader": "^3.2.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
