Add generators for selfies etc.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@mdx-js/react": "^3.0.0",
-    "@peterspackman/occjs": "^0.7.10",
+    "@peterspackman/occjs": "^0.8.0",
+    "@peterspackman/selfies": "^0.2.0",
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "clsx": "^2.0.0",
