Update MD simulation controls etc.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
@@ -44,7 +46,8 @@
     "@docusaurus/types": "3.8.1",
     "@types/three": "^0.173.0",
     "string-replace-loader": "^3.2.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vitest": "^4.0.14"
   },
   "browserslist": {
     "production": [
